# instruct-hn

./: .gitignore
.github/ISSUE_TEMPLATE/: feature_request.md  new-feature.md
.github/workflows/: build-backend.yaml  pr_checks.yaml
backend/: Cargo.toml  Dockerfile
backend/lib/firebase_listener/: listener.rs
backend/lib/sync_service/: mod.rs
backend/src/: main.rs  triton.rs
backend/src/config/: mod.rs
backend/src/db/: models.rs
backend/src/firebase_listener/: listener.rs  mod.rs
backend/src/hn_processor/: embedder.rs
backend/src/sync_service/: mod.rs
exploratory/: topics.ipynb
exploratory/topic-modeling/: create-embeddings.ipynb
infra/nomad/client/: client.hcl
infra/nomad/jobs/: backend.hcl
