[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
clap = { version="4.3.11", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.19"
ndarray = "0.15.6"
prost = "0.11.9"
serde = "1.0.171"
tokenizers = "0.13.3"
tokio = { version = "1.29.1", features = ["full"] }
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
